--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,20 @@
     ],
     "require": {
         "php": "^5.6|^7.0",
-        "webeweb/core-bundle": "^1.0"
+        "webeweb/core-bundle": "^1.0",
+        "webeweb/smsmode-library": "^2.0@dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7|^7.0"
+        "phpunit/phpunit": "^5.7|^7.0",
+        "doctrine/doctrine-bundle": "^1.0",
+        "doctrine/orm": "^2.2",
+        "sensio/framework-extra-bundle": "^2.7|^3.0|^4.0",
+        "symfony/browser-kit": "^2.7|^3.0|^4.0",
+        "symfony/form": "^2.7|^3.0|^4.0",
+        "symfony/monolog-bundle": "^2.7|^3.0|^4.0",
+        "symfony/security-bundle": "^2.7|^3.0|^4.0",
+        "symfony/templating": "^2.7|^3.0|^4.0",
+        "symfony/twig-bundle": "^2.7|^3.0|^4.0"
     },
     "support": {
         "issues": "https://github.com/webeweb/smsmode-bundle/issues"
