--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -9,8 +9,10 @@ services:
             - ["setPseudo",      ["@?smsmode.pseudo"]]
             - ["setPass",        ["@?smsmode.pass"]]
         tags:
+            - { name: "kernel.event_listener", event: "webeweb.smsmode.event.account_balance",             method: "onAccountBalance" }
             - { name: "kernel.event_listener", event: "webeweb.smsmode.event.adding_contact",              method: "onAddingContact" }
             - { name: "kernel.event_listener", event: "webeweb.smsmode.event.checking_sms_message_status", method: "onCheckingSMSMessageStatus" }
+            - { name: "kernel.event_listener", event: "webeweb.smsmode.event.creating_api_key",            method: "onCreatingAPIKey" }
             - { name: "kernel.event_listener", event: "webeweb.smsmode.event.creating_sub_account",        method: "onCreatingSubAccount" }
             - { name: "kernel.event_listener", event: "webeweb.smsmode.event.deleting_sms",                method: "onDeletingSMS" }
             - { name: "kernel.event_listener", event: "webeweb.smsmode.event.deleting_sub_account",        method: "onDeletingSubAccount" }
@@ -19,5 +21,6 @@ services:
             - { name: "kernel.event_listener", event: "webeweb.smsmode.event.sending_sms_batch",           method: "onSendingSMSBatch" }
             - { name: "kernel.event_listener", event: "webeweb.smsmode.event.sending_sms_message",         method: "onSendingSMSMessage" }
             - { name: "kernel.event_listener", event: "webeweb.smsmode.event.sending_text_to_speech_sms",  method: "onSendingTextToSpeechSMS" }
+            - { name: "kernel.event_listener", event: "webeweb.smsmode.event.sending_unicode_sms",         method: "onSendingUnicodeSMS" }
             - { name: "kernel.event_listener", event: "webeweb.smsmode.event.sent_sms_message_list",       method: "onSentSMSMessageList" }
             - { name: "kernel.event_listener", event: "webeweb.smsmode.event.transferring_credits",        method: "onTransferringCredits" }
