Introduce vendor name into constants and class names

--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,4 +1,4 @@
 # Resources/config/routing.yml
-smsmode:
+wbw_smsmode:
     prefix:   "/"
-    resource: "@SMSModeBundle/Resources/config/routing/smsmode.yml"
+    resource: "@WBWSMSModeBundle/Resources/config/routing/smsmode.yml"
