--- a/Tests/Fixtures/app/config/routing_test.yml
+++ b/Tests/Fixtures/app/config/routing_test.yml
@@ -1,4 +1,4 @@
 # Tests/Fixtures/app/config/routing_test.yml
-smsmode:
+wbw_smsmode:
     prefix:   "/"
-    resource: "@SMSModeBundle/Resources/config/routing.yml"
+    resource: "@WBWSMSModeBundle/Resources/config/routing.yml"
