--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "require": {
         "php": "^5.6|^7.0",
         "webeweb/core-bundle": "^1.0",
-        "webeweb/smsmode-library": "^2.0@dev"
+        "webeweb/smsmode-library": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7|^7.0",
