--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,8 @@ matrix:
           env: "SYMFONY_VERSION=4.1.*"
         - php: "7.1"
           env: "SYMFONY_VERSION=4.2.*"
+        - php: "7.1"
+          env: "SYMFONY_VERSION=4.3.*"
     allow_failures:
         - php: "nightly"
 
