--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "webeweb"
     ],
     "homepage": "https://github.com/webeweb/smsmode-bundle",
-    "license": "LGPL-3.0-only",
+    "license": "MIT",
     "authors": [
         {
             "name": "webeweb",
