--- a/Resources/config/event_listeners.yml
+++ b/Resources/config/event_listeners.yml
@@ -4,6 +4,7 @@ services:
     wbw.smsmode.event_listener:
         class:     WBW\Bundle\SMSModeBundle\EventListener\SMSModeEventListener
         public:    true
+        arguments: ["@logger"]
         calls:
             - ["setAccessToken", ["@?smsmode.access_token"]]
             - ["setPseudo",      ["@?smsmode.pseudo"]]
