Update test configuration

--- a/Tests/Fixtures/app/config/config_test.yml
+++ b/Tests/Fixtures/app/config/config_test.yml
@@ -4,7 +4,7 @@ imports:
     - { resource: "services_test.yml" }
 
 parameters:
-    locale: en
+    locale: "en"
 
 framework:
     default_locale: "%locale%"
