--- a/Tests/Fixtures/app/config/config_test.yml
+++ b/Tests/Fixtures/app/config/config_test.yml
@@ -22,6 +22,7 @@ framework:
     validation:
         enabled: false
 
+# Doctrine configuration
 doctrine:
     dbal:
         driver: "pdo_sqlite"
@@ -31,6 +32,7 @@ doctrine:
         auto_mapping:                true
         naming_strategy:             "doctrine.orm.naming_strategy.underscore"
 
+# Monolog configuration
 monolog:
     handlers:
         main:
@@ -38,6 +40,7 @@ monolog:
             path:  "%kernel.logs_dir%/test.log"
             type:  "stream"
 
+# Twig configuration
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
