--- a/composer.json
+++ b/composer.json
@@ -26,12 +26,13 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7|^7.0",
-        "doctrine/doctrine-bundle": "^1.0",
-        "doctrine/orm": "^2.2",
+        "doctrine/doctrine-bundle": "^1.7",
+        "doctrine/orm": "^2.5",
+        "monolog/monolog": "^1.18",
         "sensio/framework-extra-bundle": "^2.7|^3.0|^4.0",
         "symfony/browser-kit": "^2.7|^3.0|^4.0",
         "symfony/form": "^2.7|^3.0|^4.0",
-        "symfony/monolog-bundle": "^2.7|^3.0|^4.0",
+        "symfony/monolog-bundle": "^3.0",
         "symfony/security-bundle": "^2.7|^3.0|^4.0",
         "symfony/templating": "^2.7|^3.0|^4.0",
         "symfony/twig-bundle": "^2.7|^3.0|^4.0"
