--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,8 @@ matrix:
             env: "SYMFONY_VERSION=4.2.*"
         -   php: "7.1"
             env: "SYMFONY_VERSION=4.3.*"
+        -   php: "7.1"
+            env: "SYMFONY_VERSION=4.4.*"
     allow_failures:
         -   php: "nightly"
 
