--- a/.travis.yml
+++ b/.travis.yml
@@ -41,8 +41,8 @@ matrix:
 
 before_install:
     - /bin/dd if=/dev/zero of=/var/swap.1 bs=1M count=8192
-    - /sbin/mkswap /var/swap.1
-    - /sbin/swapon /var/swap.1
+    - /sbin/mkswap ./swap.1
+    - /sbin/swapon ./swap.1
     #- echo "memory_limit=4096M" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
     - if [ "" != "$SYMFONY_VERSION" ]; then COMPOSER_MEMORY_LIMIT=-1 composer require "symfony/symfony:${SYMFONY_VERSION}" --no-update; else COMPOSER_MEMORY_LIMIT=-1 composer require "symfony/symfony:3.4.*"; fi;
 
