--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ matrix:
         -   php: "nightly"
 
 before_install:
-    - /bin/dd if=/dev/zero of=/var/swap.1 bs=1M count=8192
+    - /bin/dd if=/dev/zero of=./swap.1 bs=1M count=8192
     - /sbin/mkswap ./swap.1
     - /sbin/swapon ./swap.1
     #- echo "memory_limit=4096M" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
