--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 # .travis.yml
 language: "php"
 
-sudo: true
-
 php:
     - "5.6"
     - "7.0"
@@ -41,6 +39,8 @@ matrix:
     allow_failures:
         -   php: "nightly"
 
+sudo: required
+
 before_install:
     - sudo /bin/dd if=/dev/zero of=/var/swap bs=1M count=8192
     - sudo /sbin/mkswap /var/swap
@@ -49,7 +49,7 @@ before_install:
     - if [ "" != "$SYMFONY_VERSION" ]; then COMPOSER_MEMORY_LIMIT=-1 composer require "symfony/symfony:${SYMFONY_VERSION}" --no-update; else COMPOSER_MEMORY_LIMIT=-1 composer require "symfony/symfony:3.4.*"; fi;
 
 install:
-    - COMPOSER_MEMORY_LIMIT=-1 composer install
+    - COMPOSER_MEMORY_LIMIT=-1 composer update
     - wget -c -nc --retry-connrefused --tries=0 https://github.com/php-coveralls/php-coveralls/releases/download/v2.2.0/php-coveralls.phar -O coveralls.phar
     - chmod +x coveralls.phar
     - php coveralls.phar --version
