--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "bundle",
         "sMsmode",
         "SMS",
-        "Symfony",
+        "symfony",
         "webeweb"
     ],
     "homepage": "https://github.com/webeweb/smsmode-bundle",
@@ -19,23 +19,23 @@
         }
     ],
     "require": {
-        "php": "^5.6|^7.0",
+        "php": "^7.1",
         "ext-json": "*",
-        "webeweb/core-bundle": "^2.13",
-        "webeweb/smsmode-library": "^2.9"
+        "webeweb/core-bundle": "^2.20",
+        "webeweb/smsmode-library": "^2.10"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7|^7.0",
+        "phpunit/phpunit": "^7.0|^9.0",
         "doctrine/doctrine-bundle": "^1.7",
         "doctrine/orm": "^2.5",
         "monolog/monolog": "^1.18",
-        "sensio/framework-extra-bundle": "^2.7|^3.0|^4.0",
-        "symfony/browser-kit": "^2.7|^3.0|^4.0",
-        "symfony/form": "^2.7|^3.0|^4.0",
+        "sensio/framework-extra-bundle": "^3.4|^4.0",
+        "symfony/browser-kit": "^3.4|^4.0",
+        "symfony/form": "^3.4|^4.0",
         "symfony/monolog-bundle": "^3.0",
-        "symfony/security-bundle": "^2.7|^3.0|^4.0",
-        "symfony/templating": "^2.7|^3.0|^4.0",
-        "symfony/twig-bundle": "^2.7|^3.0|^4.0"
+        "symfony/security-bundle": "^3.4|^4.0",
+        "symfony/templating": "^3.4|^4.0",
+        "symfony/twig-bundle": "^3.4|^4.0"
     },
     "config": {
         "sort-packages": true
