--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "php": "^7.1",
         "ext-json": "*",
         "webeweb/core-bundle": "^2.20",
+        "webeweb/core-library": "^8.0",
         "webeweb/smsmode-library": "^3.0"
     },
     "require-dev": {
