--- a/composer.json
+++ b/composer.json
@@ -27,16 +27,11 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0|^9.0",
-        "doctrine/doctrine-bundle": "^1.7",
-        "doctrine/orm": "^2.5",
         "monolog/monolog": "^1.18",
         "sensio/framework-extra-bundle": "^3.4|^4.0",
         "symfony/browser-kit": "^3.4|^4.0",
-        "symfony/form": "^3.4|^4.0",
         "symfony/monolog-bundle": "^3.0",
-        "symfony/security-bundle": "^3.4|^4.0",
-        "symfony/templating": "^3.4|^4.0",
-        "symfony/twig-bundle": "^3.4|^4.0"
+        "symfony/security-bundle": "^3.4|^4.0"
     },
     "config": {
         "sort-packages": true
