--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,10 @@
         }
     ],
     "require": {
-        "php": "^7.1",
+        "php": "^7.1|^8.0",
         "ext-json": "*",
         "webeweb/core-bundle": "^3.0",
-        "webeweb/core-library": "^8.0",
+        "webeweb/core-library": "^8.33",
         "webeweb/smsmode-library": "^3.0"
     },
     "require-dev": {
