--- a/Tests/Fixtures/app/config/config_test.yml
+++ b/Tests/Fixtures/app/config/config_test.yml
@@ -9,7 +9,7 @@ parameters:
 framework:
     default_locale: "%locale%"
     router:
-        resource:            "%kernel.root_dir%/config/routing_test.yml"
+        resource:            "%kernel.project_dir%/config/routing_test.yml"
         strict_requirements: true
     secret:         "ThisTokenIsNotSoSecretChangeIt"
     session:
