--- a/Resources/config/controllers.yml
+++ b/Resources/config/controllers.yml
@@ -1,11 +1,11 @@
 # Resources/config/controllers.yml
 services:
 
-    WBW\Bundle\SMSModeBundle\Controller\DefaultController:
+    WBW\Bundle\SmsModeBundle\Controller\DefaultController:
         alias:  "wbw.smsmode.controller.smsmode.default"
         public: true
 
     wbw.smsmode.controller.smsmode.default:
-        class: WBW\Bundle\SMSModeBundle\Controller\DefaultController
+        class: WBW\Bundle\SmsModeBundle\Controller\DefaultController
         calls:
             - [ "setContainer", [ "@service_container" ] ]
