--- a/Resources/config/routing/default.yml
+++ b/Resources/config/routing/default.yml
@@ -1,10 +1,10 @@
 # Resources/config/routing/default.yml
 wbw_smsmode_default_delivery_report_callback:
     path: "/delivery-report-callback"
-    defaults: { _controller: "WBW\\Bundle\\SMSModeBundle\\Controller\\DefaultController::deliveryReportCallbackAction" }
+    defaults: { _controller: "WBW\\Bundle\\SmsModeBundle\\Controller\\DefaultController::deliveryReportCallbackAction" }
     methods: [ "GET" ]
 
 wbw_smsmode_default_sms_reply_callback:
     path: "/sms-reply-callback"
-    defaults: { _controller: "WBW\\Bundle\\SMSModeBundle\\Controller\\DefaultController::smsReplyCallbackAction" }
+    defaults: { _controller: "WBW\\Bundle\\SmsModeBundle\\Controller\\DefaultController::smsReplyCallbackAction" }
     methods: [ "GET" ]
