--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "ext-json": "*",
         "webeweb/core-bundle": "^3.0",
         "webeweb/core-library": "^8.33",
-        "webeweb/smsmode-library": "^3.0"
+        "webeweb/smsmode-library": "^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0|^9.0",
@@ -42,7 +42,7 @@
     },
     "autoload": {
         "psr-4": {
-            "WBW\\Bundle\\SMSModeBundle\\": ""
+            "WBW\\Bundle\\SmsModeBundle\\": ""
         },
         "exclude-from-classmap": [
             "/Tests/"
@@ -50,7 +50,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "WBW\\Bundle\\SMSModeBundle\\Tests\\": "Tests/"
+            "WBW\\Bundle\\SmsModeBundle\\Tests\\": "Tests/"
         }
     },
     "support": {
