--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "phpunit/phpunit": "^7.0|^9.0",
         "monolog/monolog": "^1.18",
         "symfony/browser-kit": "^4.4|^5.0",
+        "symfony/framework-bundle": "^4.4|^5.0",
         "symfony/monolog-bundle": "^3.0",
         "symfony/security-bundle": "^4.4|^5.0"
     },
