Update GitHub workflows configuration

--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -33,4 +33,4 @@ jobs:
                       php phpstan.phar --version
 
             -   name: "Analyses"
-                run:  php phpstan.phar analyse src/ --error-format=github
+                run:  php phpstan.phar analyse . --error-format=github --configuration phpstan.neon
