--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -31,6 +31,7 @@ jobs:
                       wget -c -nc --retry-connrefused --tries=0 https://github.com/phpstan/phpstan/releases/download/1.4.10/phpstan.phar -O phpstan.phar
                       chmod +x phpstan.phar
                       php phpstan.phar --version
+                      echo -e "parameters:\n    level: 0\n    excludePaths:\n        -   \"Resources/*\"\n        -   \"Tests/*\"\n        -   \"vendor/*\"" > phpstan.neon
 
             -   name: "Analyses"
                 run:  php phpstan.phar analyse . --error-format=github --configuration phpstan.neon
