--- a/Resources/config/event_listeners.yml
+++ b/Resources/config/event_listeners.yml
@@ -5,9 +5,9 @@ services:
         class:  WBW\Bundle\SmsModeBundle\EventListener\DefaultEventListener
         arguments: [ "@logger" ]
         calls:
-            - [ "setAccessToken", [ "%smsmode.access_token%" ] ]
-            - [ "setPseudo",      [ "%smsmode.pseudo%" ] ]
-            - [ "setPass",        [ "%smsmode.pass%" ] ]
+            - [ "setAccessToken", [ "%wbw_smsmode.access_token%" ] ]
+            - [ "setPseudo",      [ "%wbw_smsmode.pseudo%" ] ]
+            - [ "setPass",        [ "%wbw_smsmode.pass%" ] ]
         public: true
         tags:
             - { name: "kernel.event_listener", event: "wbw.smsmode.event.account_balance",             method: "onAccountBalance" }
