Update event listeners configuration

--- a/Resources/config/event_listeners.yml
+++ b/Resources/config/event_listeners.yml
@@ -8,7 +8,7 @@ services:
             - [ "setAccessToken", [ "%wbw_smsmode.access_token%" ] ]
             - [ "setPseudo",      [ "%wbw_smsmode.pseudo%" ] ]
             - [ "setPass",        [ "%wbw_smsmode.pass%" ] ]
-        public: false
+        public: true
         tags:
             - { name: "kernel.event_listener", event: "wbw.smsmode.event.account_balance",             method: "onAccountBalance" }
             - { name: "kernel.event_listener", event: "wbw.smsmode.event.adding_contact",              method: "onAddingContact" }
