Revert "Update controllers configuration"
This reverts commit a96010ce44c4862e63b6b26b00254556e30854ad.

--- a/Resources/config/controllers.yml
+++ b/Resources/config/controllers.yml
@@ -3,7 +3,7 @@ services:
 
     WBW\Bundle\SmsModeBundle\Controller\DefaultController:
         alias:  "wbw.smsmode.controller.default"
-        public: true
+        public: false
 
     wbw.smsmode.controller.default:
         class: WBW\Bundle\SmsModeBundle\Controller\DefaultController
