--- a/composer.json
+++ b/composer.json
@@ -27,11 +27,12 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0|^9.0",
+        "masterminds/html5": "^2.6",
         "monolog/monolog": "^1.18",
-        "symfony/browser-kit": "^4.4|^5.0",
-        "symfony/framework-bundle": "^4.4|^5.0",
+        "symfony/browser-kit": "^4.4|^5.0|^6.0",
+        "symfony/framework-bundle": "^4.4|^5.0|^6.0",
         "symfony/monolog-bundle": "^3.0",
-        "symfony/security-bundle": "^4.4|^5.0"
+        "symfony/security-bundle": "^4.4|^5.0|^6.0"
     },
     "config": {
         "sort-packages": true
