--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "webeweb/smsmode-bundle",
     "type": "symfony-bundle",
-    "description": "sMsmode bundle for Symfony 4 and more",
+    "description": "Integrate sMsmode API with Symfony 2 and more",
     "keywords": [
         "API",
         "bundle",
